<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#38427D"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="315dp"
        android:layout_height="331dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="5">

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_4"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_5"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_9"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_8"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_7"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_1"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_2"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_3"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/_0"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/buttonDot"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/comma"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/buttonDelete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/delete"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/buttonTranslate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/Translate"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonSwap"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner"
            android:text="swap"
            app:layout_column="0"
            app:layout_row="0" />

    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
